--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 .DS_Store
+**/*.DS_Store
+._.DS_Store
+**/.DS_Store
+**/._.DS_Store
 ./"Systems Diagrams"/.DS_Store
 # Byte-compiled / optimized / DLL files
 __pycache__/
